--- a/src/pages/products/[...slug].astro
+++ b/src/pages/products/[...slug].astro
@@ -158,6 +158,9 @@ const pageTitle: string = `${product.data.title} | ${SITE.title}`;
                     <p class="text-neutral-600 dark:text-neutral-400">
                       {spec.subTitle}
                     </p>
+ {spec.image && (
+          <img src={spec.image} alt={`图片描述 - ${spec.title}`} />
+        )}
                   </div>
                 ))
               }
