--- a/src/pages/products/[...slug].astro
+++ b/src/pages/products/[...slug].astro
@@ -168,9 +168,14 @@ const pageTitle: string = `${product.data.title} | ${SITE.title}`;
                     <p class="text-neutral-600 dark:text-neutral-400">
                       {spec.subTitle}
                     </p>
-{spec.image && (
-  <img src={resolve(spec.image)} alt={`图片描述 - ${spec.title}`} />
-)}
+<Image
+      src={product.data.specificationsRight.first}
+      class="h-full w-full object-cover object-center"
+      alt="specificationsRight"
+      format={"avif"}
+    />
+  )
+}
                   </div>
                 ))
               }
