--- a/src/pages/products/[...slug].astro
+++ b/src/pages/products/[...slug].astro
@@ -173,7 +173,7 @@ const pageTitle: string = `${product.data.title} | ${SITE.title}`;
     <Image
       src={spec.image}
       alt={`图片描述 - ${spec.title}`}
-      class="w-full object-cover object-center"
+      className="w-full object-cover object-center"
     />
   )
 }
