--- a/src/pages/products/[...slug].astro
+++ b/src/pages/products/[...slug].astro
@@ -169,7 +169,7 @@ const pageTitle: string = `${product.data.title} | ${SITE.title}`;
                       {spec.subTitle}
                     </p>
 <Image
-              src={product.data.specificationsRight?.map}
+              src={product.data.main.image}
               class="h-full w-full object-cover object-center"
               alt="Illustration"
               format={"avif"}
