--- a/src/pages/products/[...slug].astro
+++ b/src/pages/products/[...slug].astro
@@ -170,7 +170,7 @@ const pageTitle: string = `${product.data.title} | ${SITE.title}`;
                     </p>
 <Image
           id="fadeInMoveRight"
-          src={product.data.main.imageform}
+          src={product.data.main.imgMain}
           class="w-[600px]"
           alt={product.data.main.imgAlt}
           format={"avif"}
