--- a/src/components/ui/cards/CardSmall.astro
+++ b/src/components/ui/cards/CardSmall.astro
@@ -23,6 +23,7 @@ const imageClass =
   <!-- The product's main image -->
   <Image
     src={product.data.main.imgCard}
+    src={product.data.main.imgForm}
     alt={product.data.main.imgAlt}
     draggable={"false"}
     class={imageClass}
