--- a/src/pages/products/[...slug].astro
+++ b/src/pages/products/[...slug].astro
@@ -170,9 +170,9 @@ const pageTitle: string = `${product.data.title} | ${SITE.title}`;
                     </p>
 <Image
           id="fadeInMoveRight"
-          src={product.data.specificationsRight.form}
+          src={product.data.blueprints.form}
           class="w-[600px]"
-          alt={product.data.main.imgAlt}
+          alt="Blueprint Illustration"
           format={"avif"}
           loading={"eager"}
         />
