--- a/src/pages/products/[...slug].astro
+++ b/src/pages/products/[...slug].astro
@@ -11,7 +11,7 @@ import { SITE } from "@/data_files/constants";
 type Specification = {
   title: string;
   subTitle: string;
-  image?: string; // Optional image property
+  image: string; // Optional image property
 };
 
 // Global declaration for gsap animation library
