--- a/src/pages/products/[...slug].astro
+++ b/src/pages/products/[...slug].astro
@@ -11,7 +11,8 @@ import { SITE } from "@/data_files/constants";
 type Specification = {
   title: string;
   subTitle: string;
-  image: string; // Optional image property
+  img: any;
+  imgAlt: any;
 };
 
 // Global declaration for gsap animation library
