--- a/src/pages/products/[...slug].astro
+++ b/src/pages/products/[...slug].astro
@@ -169,6 +169,13 @@ const pageTitle: string = `${product.data.title} | ${SITE.title}`;
                     <p class="text-neutral-600 dark:text-neutral-400">
                       {spec.subTitle}
                     </p>
+        <Image
+          id="fadeInMoveRight"
+          src="/images/small-crusher-form.webp"
+          class="w-[600px]"
+          alt="small crusher form"
+          format={"avif"}
+          loading={"eager"}
 
                   </div>
                 ))
