--- a/src/pages/products/[...slug].astro
+++ b/src/pages/products/[...slug].astro
@@ -168,6 +168,8 @@ const pageTitle: string = `${product.data.title} | ${SITE.title}`;
                     </h3>
                     <p class="text-neutral-600 dark:text-neutral-400">
                       {spec.subTitle}
+                      {spec.img}
+
                     </p>
                   </div>
                 ))
