--- a/src/pages/insights/[...slug].astro
+++ b/src/pages/insights/[...slug].astro
@@ -143,6 +143,17 @@ const pageTitle: string = `${post.data.title} | ${SITE.title}`;
     height: 1.25rem;
     margin-right: 0.3rem;
   }
+  /* 添加表格边框样式 */
+  table {
+    border-collapse: collapse;
+    width: 100%; /* 可根据需要调整 */
+  }
+
+  th,
+  td {
+    border: 1px solid #000; /* 这将添加黑色边框 */
+    padding: 8px; /* 可根据需要调整 */
+  }
 </style>
 
 <script>
