--- a/src/pages/insights/[...slug].astro
+++ b/src/pages/insights/[...slug].astro
@@ -71,7 +71,7 @@ const pageTitle: string = `${post.data.title} | ${SITE.title}`;
           </h1>
 
           <article
-            class="text-pretty text-lg text-neutral-700 dark:text-neutral-300"
+            class="markdown-content text-pretty text-lg text-neutral-700 dark:text-neutral-300"
           >
             <Content />
           </article>
@@ -143,29 +143,24 @@ const pageTitle: string = `${post.data.title} | ${SITE.title}`;
     height: 1.25rem;
     margin-right: 0.3rem;
   }
-    /* 添加表格的自适应和居中样式 */
-  .table-container {
-    width: 100%;
-    overflow-x: auto; /* 在小屏幕上允许滚动 */
-  }
-
+     /* 表格样式 */
   table {
-    width: 100%;
-    margin-left: auto;
-    margin-right: auto;
-    border-collapse: collapse;
+    width: 100%; /* 表格宽度为100% */
+    margin-top: 1em; /* 在表格顶部添加一些间隔 */
+    margin-bottom: 1em; /* 在表格底部添加一些间隔 */
+    border-collapse: collapse; /* 边框合并，避免双边框 */
   }
 
   th, td {
-    border: 1px solid #000;
-    padding: 8px; /* 或者您想要的任何值 */
-    text-align: left; /* 如果您希望文字左对齐 */
+    border: 1px solid #ddd; /* 单元格边框样式 */
+    text-align: left; /* 文本左对齐 */
+    padding: 8px; /* 单元格内边距 */
   }
 
-  /* 在较小屏幕上优化表格显示 */
+  /* 在小屏幕上为表格添加滚动 */
   @media (max-width: 768px) {
-    th, td {
-      padding: 4px; /* 减少填充以节省空间 */
+    .markdown-content { /* 假设包裹 Markdown 内容的 div 有这个类名 */
+      overflow-x: auto; /* 允许水平滚动 */
     }
   }
 </style>
