--- a/src/pages/insights/[...slug].astro
+++ b/src/pages/insights/[...slug].astro
@@ -24,7 +24,7 @@ const pageTitle: string = `${post.data.title} | ${SITE.title}`;
 
 <MainLayout title={pageTitle}>
   <section class="py-6 sm:py-8 lg:py-12">
-    <div class="mx-auto max-w-screen-xl px-4 md:px-8">
+    <div class="mx-auto px-4 md:px-8 max-w-xs sm:max-w-md md:max-w-lg lg:max-w-xl xl:max-w-screen-xl">
       <div class="grid gap-8 md:grid-cols-2 lg:gap-12">
         <div>
           <div class="h-64 overflow-hidden rounded-lg shadow-lg md:h-auto">
@@ -143,19 +143,23 @@ const pageTitle: string = `${post.data.title} | ${SITE.title}`;
     height: 1.25rem;
     margin-right: 0.3rem;
   }
-  /* 下面添加新的全局样式规则 */
+
   table {
     border-collapse: collapse;
-    width: 100%; /* 根据需要调整 */
+    width: 100%;
     margin-left: auto;
     margin-right: auto;
   }
 
   th, td {
-    border: 1px solid #000; /* 添加黑色边框 */
-    padding: 8px; /* 根据需要调整 */
+    border: 1px solid #000;
+    padding: 8px;
   }
-     
+
+  img, video {
+    max-width: 100%;
+    height: auto;
+  }
 </style>
 
 <script>
