--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -37,15 +37,15 @@ const pageTitle: string = `Blog | ${SITE.title}`;
   structuredData={{
     "@context": "https://schema.org",
     "@type": "WebPage",
-    "@id": "https://screwfast.uk/blog",
-    "url": "https://screwfast.uk/blog",
-    "name": "Blog | ScrewFast",
-    "description": "Stay up-to-date with the latest trends and developments in the construction industry with insights from ScrewFast's team of industry experts.",
+    "@id": "https://www.recyclemachine.net/recycling-mechanical-products",
+    "url": "https://www.recyclemachine.net/recycling-mechanical-products",
+    "name": "Blog | Rumtoo Machinery",
+    "description": "Through insights from the Rumtoo expert team, understand the latest product trends in the plastic recycling machinery industry.",
     "isPartOf": {
       "@type": "WebSite",
-      "url": "https://screwfast.uk",
-      "name": "ScrewFast",
-      "description": "ScrewFast offers top-tier hardware tools and expert construction services to meet all your project needs."
+      "url": "https://recyclemachine.net",
+      "name": "Rumtoo Machinery",
+      "description": "Rumtoo offers top-tier plastic recycling machine and pelletizing to meet all your project needs."
     },
     "inLanguage": "en-US"
   }}
