--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -22,12 +22,12 @@ const mostRecentPost: CollectionEntry<"blog"> = blogPosts[0];
 const otherPosts: CollectionEntry<"blog">[] = blogPosts.slice(1);
 
 // Define variables for page content
-const title: string = "Your Gateway to Construction Excellence";
+const title: string = "Revolutionizing Plastic Recycling Solutions";
 const subTitle: string =
-  "Explore the latest news, tips, and insights from ScrewFast to enhance your construction projects. From product spotlights to project management strategies, our blog is your go-to resource for all things hardware and construction.";
+  "Discover the cutting-edge plastic recycling machines and explore the latest industry trends, tips, and insights. From product spotlights to recycling strategies, our blog is your comprehensive resource for all things related to plastic recycling and sustainable solutions.";
 const secondTitle: string = "Insights";
 const secondSubTitle: string =
-  "Stay up-to-date with the latest trends and developments in the construction industry with insights from ScrewFast's team of industry experts. ";
+  "Stay ahead of the curve with the latest advancements and developments in the plastic recycling industry, as shared by our team of recycling experts. ";
 
 const pageTitle: string = `Blog | ${SITE.title}`;
 ---
