--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -88,9 +88,6 @@ const pageTitle: string = `${post.data.title} | ${SITE.title}`;
           post.data.contents.map((content: string, index: any) =>
             index === 1 ? (
               <>
-                <p class="text-pretty text-lg text-neutral-700 dark:text-neutral-300">
-                  {content}
-                </p>
                 <Fragment set:html={content} />
                 <Image
                   class="w-full rounded-xl object-cover"
@@ -101,9 +98,7 @@ const pageTitle: string = `${post.data.title} | ${SITE.title}`;
                 />
               </>
             ) : (
-              <p class="text-pretty text-lg text-neutral-700 dark:text-neutral-300">
-                {content}
-              </p>
+        <Fragment set:html={content} />
             )
           )
         }
