--- a/src/pages/insights/[...slug].astro
+++ b/src/pages/insights/[...slug].astro
@@ -32,6 +32,8 @@ const pageTitle: string = `${post.data.title} | ${SITE.title}`;
               class="h-full w-full object-cover object-center"
               src={post.data.cardImage}
               alt={post.data.cardImageAlt}
+              src={post.data.articleImage}
+              alt={post.data.articleImageAlt}
               draggable={"false"}
               format={"avif"}
             />
