--- a/src/pages/insights/[...slug].astro
+++ b/src/pages/insights/[...slug].astro
@@ -4,6 +4,8 @@ import { SITE } from "@/data_files/constants";
 import MainLayout from "@/layouts/MainLayout.astro";
 import { Image } from "astro:assets";
 import { getCollection } from "astro:content";
+import react from '@astrojs/react';
+import { Fragment } from 'react'; // 从 react 导入 Fragment
 
 // Use `getStaticPaths` to generate static routes for generated pages on build
 export async function getStaticPaths() {
