--- a/src/pages/insights/[...slug].astro
+++ b/src/pages/insights/[...slug].astro
@@ -31,6 +31,7 @@ const pageTitle: string = `${post.data.title} | ${SITE.title}`;
               class="h-full w-full object-cover object-center"
               src={post.data.cardImage}
               alt={post.data.cardImageAlt}
+src={localBirdImage.src} alt="一只鸟坐在蛋窝上。">
               draggable={"false"}
               format={"avif"}
             />
