--- a/src/pages/fr/contact.astro
+++ b/src/pages/fr/contact.astro
@@ -11,8 +11,8 @@ import ContactSection from "@/components/sections/fr/ContactSection_fr.astro";
   structuredData={{
     "@context": "https://schema.org",
     "@type": "WebPage",
-    "@id": "https://screwfast.uk/contact",
-    url: "https://screwfast.uk/contact",
+    "@id": "https://www.recyclemachine.net/contact",
+    url: "https://www.recyclemachine.net/contact",
     name: "Contact Us | ScrewFast",
     description:
       "Have questions or want to discuss a project? Reach out, and let's craft the perfect solution with our tools and services.",
