--- a/src/pages/fr/products/index.astro
+++ b/src/pages/fr/products/index.astro
@@ -64,8 +64,8 @@ const testimonials = [
   structuredData={{
     "@context": "https://schema.org",
     "@type": "WebPage",
-    "@id": "https://screwfast.uk/products",
-    url: "https://screwfast.uk/products",
+    "@id": "https://www.recyclemachine.net/products",
+    url: "https://www.recyclemachine.net/products",
     name: "Hardware Tools | ScrewFast",
     description:
       "Explore the durability and precision of ScrewFast tools, designed for both professionals and enthusiasts.",
