--- a/src/pages/fr/services.astro
+++ b/src/pages/fr/services.astro
@@ -99,8 +99,8 @@ const articles: Article[] = [
   structuredData={{
     "@context": "https://schema.org",
     "@type": "WebPage",
-    "@id": "https://screwfast.uk/services",
-    url: "https://screwfast.uk/services",
+    "@id": "https://www.recyclemachine.net/services",
+    url: "https://www.recyclemachine.net/services",
     name: "Expert Consultation Services | ScrewFast",
     description:
       "Uniting expertise with your vision, ScrewFast provides exceptional service and comprehensive solutions in the hardware and construction industry, from consultation to project completion.",
