--- a/src/pages/fr/blog/index.astro
+++ b/src/pages/fr/blog/index.astro
@@ -37,8 +37,8 @@ const pageTitle: string = `Blog | ${SITE.title}`;
   structuredData={{
     "@context": "https://schema.org",
     "@type": "WebPage",
-    "@id": "https://screwfast.uk/blog",
-    "url": "https://screwfast.uk/blog",
+    "@id": "https://www.recyclemachine.net/blog",
+    "url": "https://www.recyclemachine.net/blog",
     "name": "Blog | ScrewFast",
     "description": "Stay up-to-date with the latest trends and developments in the construction industry with insights from ScrewFast's team of industry experts.",
     "isPartOf": {
