--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -141,6 +141,12 @@ const pageTitle: string = `${post.data.title} | ${SITE.title}`;
     margin-bottom: 1rem;
   }
 
+/* 包裹表格的容器样式 */
+.scrollable-table-container {
+  overflow-x: auto; /* 使得容器在水平方向上滚动 */
+  max-width: 100%; /* 限制最大宽度 */
+}
+
   /* 应用于所有表格的基础样式 */
 table {
     width: 100%;            /* 表格宽度占满容器 */
