--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -163,7 +163,7 @@ th, td {
 
 /* 表头专用样式 */
 th {
-    background-color: #f9f9f9; /* 背景颜色 */
+    background-color: #ffc107; /* 背景颜色 */
     font-weight: bold;         /* 字体加粗 */
 }
 
