--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -206,4 +206,16 @@ th {
 .content-below {
   margin-top: 20px; /* 在分割线和下面内容之间添加空间 */
 }
+
+.image-style {
+  border-radius: 20px; /* 圆角的半径 */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* 阴影效果 */
+  border: 1px solid #ccc; /* 边框颜色和宽度 */
+  transition: transform 0.3s ease; /* 动画效果 */
+}
+
+.image-style:hover {
+  transform: scale(1.05); /* 鼠标悬停时放大图片 */
+}
+
 </style>
