--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -176,6 +176,12 @@ th {
     font-weight: bold;         /* 字体加粗 */
 }
 
+/* 首列专用样式 */
+td:first-child, th:first-child {
+  background-color: #ffc107; /* 背景颜色 */
+  font-weight: bold; /* 字体加粗 */
+}
+
 /* 响应式字体大小 */
 @media (max-width: 600px) {
     th, td {
