--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -170,16 +170,10 @@ th, td {
     text-align: left;       /* 文字左对齐 */
 }
 
-/* 表头专用样式 */
-th {
+/* 表头和首列专用样式 */
+th, .scrollable-table-container tbody tr td:first-child {
     background-color: #ffc107; /* 背景颜色 */
     font-weight: bold;         /* 字体加粗 */
-}
-
-/* 首列专用样式 */
-td:first-child, th:first-child {
-  background-color: #ffc107; /* 背景颜色 */
-  font-weight: bold; /* 字体加粗 */
 }
 
 /* 响应式字体大小 */
