--- a/src/pages/fr/blog/index.astro
+++ b/src/pages/fr/blog/index.astro
@@ -43,7 +43,7 @@ const pageTitle: string = `Blog | ${SITE.title}`;
     "description": "Stay up-to-date with the latest trends and developments in the construction industry with insights from ScrewFast's team of industry experts.",
     "isPartOf": {
       "@type": "WebSite",
-      "url": "https://screwfast.uk",
+      "url": "https://www.recyclemachine.net",
       "name": "ScrewFast",
       "description": "ScrewFast offers top-tier hardware tools and expert construction services to meet all your project needs."
     },
