--- a/src/pages/fr/contact.astro
+++ b/src/pages/fr/contact.astro
@@ -18,7 +18,7 @@ import ContactSection from "@/components/sections/fr/ContactSection_fr.astro";
       "Have questions or want to discuss a project? Reach out, and let's craft the perfect solution with our tools and services.",
     isPartOf: {
       "@type": "WebSite",
-      url: "https://screwfast.uk",
+      url: "https://www.recyclemachine.net",
       name: "ScrewFast",
       description:
         "ScrewFast offers top-tier hardware tools and expert construction services to meet all your project needs.",
