--- a/src/pages/fr/products/index.astro
+++ b/src/pages/fr/products/index.astro
@@ -71,7 +71,7 @@ const testimonials = [
       "Explore the durability and precision of ScrewFast tools, designed for both professionals and enthusiasts.",
     isPartOf: {
       "@type": "WebSite",
-      url: "https://screwfast.uk",
+      url: "https://www.recyclemachine.net",
       name: "ScrewFast",
       description:
         "ScrewFast offers top-tier hardware tools and expert construction services to meet all your project needs.",
