--- a/src/pages/fr/services.astro
+++ b/src/pages/fr/services.astro
@@ -106,7 +106,7 @@ const articles: Article[] = [
       "Uniting expertise with your vision, ScrewFast provides exceptional service and comprehensive solutions in the hardware and construction industry, from consultation to project completion.",
     isPartOf: {
       "@type": "WebSite",
-      url: "https://screwfast.uk",
+      url: "https://www.recyclemachine.net",
       name: "ScrewFast",
       description:
         "ScrewFast offers top-tier hardware tools and expert construction services to meet all your project needs.",
