--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -38,8 +38,8 @@ const avatarSrcs: Array<string> = [
     title=`Equip Your Projects with <span
         class="text-yellow-500 dark:text-yellow-400">Plastic Recycling Machine</span>`
     subTitle="Top-quality plastic recycling machines for every project need."
-    primaryBtn="Start Exploring"
-    primaryBtnURL="/products"
+    primaryBtn="View Our Equipment"
+    primaryBtnURL="/blog"
     secondaryBtn="Contact Sales Team"
     secondaryBtnURL="/contact"
     withReview={true}
