--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -41,7 +41,7 @@ const avatarSrcs: Array<string> = [
     primaryBtn="View Our Equipment"
     primaryBtnURL="/blog"
     secondaryBtn="Contact Sales Team"
-    secondaryBtnURL="/contact"
+    secondaryBtnURL="mailto:sales@rumtoo.com"
     withReview={true}
     avatars={avatarSrcs}
     rating=`<span class="font-bold">4.8</span> / 5`
