--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,9 +15,9 @@ import faqs from "@/data_files/faqs.json";
 import features from "@/data_files/features.json";
 import pricing from "@/data_files/pricing.json";
 import featureImage from "@/images/hero-image.webp";
-import construction from "@/images/construction-image.avif";
+import construction from "@/images/Thermal_dryer.webp";
 import tools from "@/images/Zig-Zag_Air_Classifier.webp";
-import dashboard from "@/images/dashboard-image.avif";
+import dashboard from "@/images/Belt_conveyors.webp";
 
 const avatarSrcs: Array<string> = [
   "https://images.unsplash.com/photo-1568602471122-7832951cc4c5?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=facearea&facepad=2&w=300&h=300&q=80",
