--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -17,7 +17,7 @@ const pageTitle: string = `Contact | ${SITE.title}`;
     "url": "https://www.recyclingmachine.xyz/contact",
     "name": "Contact Us | Rumtoo Machinery",
     "description":
-      "Have questions or want to discuss a project? Reach out, and let's craft the perfect solution with our tools and services.",
+      "Revolutionize plastic waste management with our cutting-edge recycling machine. Efficiently transforms various plastic types into reusable pellets. Eco-friendly, automated, and energy-efficient. Explore sustainable solutions today.",
     "isPartOf": {
       "@type": "WebSite",
       "url": "https://www.recyclingmachine.xyz",
