--- a/src/pages/fr/contact.astro
+++ b/src/pages/fr/contact.astro
@@ -6,22 +6,22 @@ import ContactSection from "@/components/sections/fr/ContactSection_fr.astro";
 
 <!--Utilizing MainLayout for the outer layout of the page, and defining meta for SEO purposes-->
 <MainLayout
-  title="Contact | ScrewFast"
+  title="Contact | Rumtoo machine de recyclage"
   lang="fr"
   structuredData={{
     "@context": "https://schema.org",
     "@type": "WebPage",
-    "@id": "https://www.recyclemachine.net/contact",
-    url: "https://www.recyclemachine.net/contact",
-    name: "Contact Us | ScrewFast",
+    "@id": "https://www.recyclingmachine.xyz/contact",
+    url: "https://www.recyclingmachine.xyz/contact",
+    name: "Contact Us | Rumtoo équipement",
     description:
-      "Have questions or want to discuss a project? Reach out, and let's craft the perfect solution with our tools and services.",
+      "Révolutionnez la gestion des déchets plastiques avec notre machine de recyclage à la pointe de la technologie. Transforme efficacement différents types de plastique en granulés réutilisables. Écologique, automatisée et économe en énergie. Explorez des solutions durables dès aujourd'hui.",
     isPartOf: {
       "@type": "WebSite",
-      url: "https://www.recyclemachine.net",
+      url: "https://www.recyclingmachine.xyz",
       name: "ScrewFast",
       description:
-        "ScrewFast offers top-tier hardware tools and expert construction services to meet all your project needs.",
+        "Rumtoo Machinery propose des machines de recyclage du plastique de premier ordre pour répondre à tous vos besoins de projet.",
     },
     inLanguage: "en-US",
   }}
