--- a/src/pages/fr/index.astro
+++ b/src/pages/fr/index.astro
@@ -31,8 +31,8 @@ const avatarSrcs: Array<string> = [
 <MainLayout lang="fr">
   <AnnouncementBanner
     btnId="dismiss-button"
-    btnTitle="Découvrez ScrewFast sur GitHub"
-    url="https://github.com/mearashadowfax/ScrewFast"
+    btnTitle="Découvrez plus de machines de recyclage"
+    url="https://www.recyclingmachine.xyz"
   />
 
   <HeroSection
@@ -40,7 +40,7 @@ const avatarSrcs: Array<string> = [
     subTitle="Outils matériels de haute qualité et services de construction experts pour tous les besoins en projet."
     primaryBtn="Commencez à explorer"
     primaryBtnURL={getRelativeLocaleUrl("fr", "products")}
-    secondaryBtn="Contacter l'équipe commerciale"
+    secondaryBtn="Contactez l'équipe commerciale"
     secondaryBtnURL={getRelativeLocaleUrl("fr", "contact")}
     withReview={true}
     avatars={avatarSrcs}
@@ -48,7 +48,7 @@ const avatarSrcs: Array<string> = [
     starCount={4}
     reviews=`À partir de plus de <span class="font-bold">12,8k</span> avis`
     src={heroImage}
-    alt="Pile de boîtes de produits ScrewFast contenant des outils matériels assortis"
+    alt="Un déchiqueteur de plastique industriel, probablement utilisé à des fins de recyclage. Les goulottes bleues et blanches alimentent le matériau plastique dans le déchiqueteur, qui le réduit ensuite en plus petits morceaux. Ces morceaux peuvent ensuite être traités davantage pour créer de nouveaux produits en plastique."
   />
 
   <ClientsSection
@@ -58,9 +58,9 @@ const avatarSrcs: Array<string> = [
 
   <FeaturesGeneral
     title="Répondre aux exigences de l'industrie"
-    subTitle="Chez ScrewFast, nous relevons les défis uniques rencontrés dans les secteurs du matériel et de la construction. Des outils de pointe aux services experts, nous sommes déterminés à vous aider à surmonter les obstacles et à atteindre vos objectifs."
+    subTitle="Chez Rumtoo Machinery, nous nous engageons à résoudre les défis uniques rencontrés dans le monde du recyclage du plastique. Des équipements de recyclage de pointe aux services d'experts, nous sommes déterminés à vous aider à surmonter les obstacles et à atteindre vos objectifs."
     src={featureImage}
-    alt="Produits ScrewFast dans des boîtes flottantes"
+    alt="Une ligne de lavage de plastique à l'échelle industrielle. Ce type de machinerie est utilisé pour recycler les déchets plastiques en les nettoyant, triant et traitant. Les différents composants visibles dans l'image comprennent probablement des broyeurs, des convoyeurs, des cuves de lavage et des systèmes de séparation. La palette de couleurs orange et grise est courante dans l'équipement industriel."
     features={features}
   />
 
@@ -70,10 +70,10 @@ const avatarSrcs: Array<string> = [
       {
         heading: "Outils de pointe",
         content:
-          "Optimisez vos projets avec les outils de pointe de ScrewFast. Faites l'expérience d'une efficacité accrue dans la gestion de la construction avec nos solutions automatisées sophistiquées.",
+          "Nos machines de recyclage de pointe sont conçues pour être efficaces et polyvalentes, traitant facilement différents types et volumes de plastique.",
         svg: "tools",
         src: tools,
-        alt: "Équipement lourd jaune et noir sur un champ d'herbe brune",
+        alt: "représentent un classificateur d'air Zig-Zag, une machine conçue pour séparer les matériaux en fonction de leur poids et de leurs caractéristiques aérodynamiques.",
         first: true,
       },
       {
@@ -97,12 +97,12 @@ const avatarSrcs: Array<string> = [
   />
 
   <TestimonialsSection
-    title="Accélérez vos projets"
-    subTitle="Chez ScrewFast, nous assurons un démarrage rapide avec une configuration de compte instantanée. Découvrez la vitesse de la construction redéfinie."
+    title="Accélérer vos projets grâce à un recyclage efficace du plastique"
+    subTitle="Chez Rumtoo Machinery, nous vous aidons à atteindre rapidement vos objectifs de développement durable et à rationaliser vos opérations grâce à nos machines de recyclage du plastique à la pointe de la technologie. Mettez en place un système en boucle fermée et faites l'expérience de la rapidité et de l'efficacité du recyclage du plastique redéfini."
     testimonials={[
       {
         content:
-          "ScrewFast a considérablement augmenté l'efficacité de notre projet. La configuration a été instantanée et leurs temps de réponse rapides sont phénoménaux. Vraiment un changement de jeu dans le support matériel et de construction !",
+          "Les solutions de recyclage du plastique ont complètement transformé notre processus de production. La mise en œuvre d'un système en boucle fermée a non seulement permis de réduire nos déchets, mais aussi de diminuer considérablement les coûts de production. L'équipe d'assistance a été fantastique, assurant une intégration rapide et sans heurts !",
         author: "Samantha Ruiz",
         role: "Directrice des opérations | ConstructIt Inc.",
         avatarSrc:
