--- a/src/pages/fr/index.astro
+++ b/src/pages/fr/index.astro
@@ -14,7 +14,7 @@ import heroImage from "@/images/wet plastic grinding.webp";
 import faqs from "@/data_files/fr/faqs.json";
 import features from "@/data_files/fr/features.json";
 import pricing from "@/data_files/fr/pricing.json";
-import featureImage from "@/images/features-image.avif";
+import featureImage from "@/images/hero-image.webp";
 import construction from "@/images/Thermal_dryer.webp";
 import tools from "@/images/Zig-Zag_Air_Classifier.webp";
 import dashboard from "@/images/Belt_conveyors.webp";
