--- a/src/pages/fr/blog/index.astro
+++ b/src/pages/fr/blog/index.astro
@@ -37,15 +37,15 @@ const pageTitle: string = `Blog | ${SITE.title}`;
   structuredData={{
     "@context": "https://schema.org",
     "@type": "WebPage",
-    "@id": "https://www.recyclemachine.net/blog",
-    "url": "https://www.recyclemachine.net/blog",
-    "name": "Blog | ScrewFast",
-    "description": "Stay up-to-date with the latest trends and developments in the construction industry with insights from ScrewFast's team of industry experts.",
+    "@id": "https://www.recyclemachine.net/recycling-mechanical-products",
+    "url": "https://www.recyclemachine.net/recycling-mechanical-products",
+    "name": "Blog | Rumtoo Machinery",
+    "description": "L'équipe d'experts de Rumtoo vous aide à comprendre les dernières tendances de l'industrie des machines de recyclage du plastique.",
     "isPartOf": {
       "@type": "WebSite",
       "url": "https://www.recyclemachine.net",
-      "name": "ScrewFast",
-      "description": "ScrewFast offers top-tier hardware tools and expert construction services to meet all your project needs."
+      "name": "Rumtoo Machinery",
+      "description": "Rumtoo propose des machines de recyclage et de granulation du plastique de premier ordre pour répondre à tous les besoins de votre projet."
     },
     "inLanguage": "en-US"
   }}
