--- a/src/pages/fr/products/index.astro
+++ b/src/pages/fr/products/index.astro
@@ -66,15 +66,16 @@ const testimonials = [
     "@type": "WebPage",
     "@id": "https://www.recyclemachine.net/products",
     url: "https://www.recyclemachine.net/products",
-    name: "Hardware Tools | ScrewFast",
+    name: "Machines de recyclage du plastique | Rumtoo",
     description:
-      "Explore the durability and precision of ScrewFast tools, designed for both professionals and enthusiasts.",
+      "Découvrez l'efficacité et la durabilité des machines de recyclage du plastique EcoCycle, conçues pour un avenir plus vert.
+",
     isPartOf: {
       "@type": "WebSite",
       url: "https://www.recyclemachine.net",
-      name: "ScrewFast",
+      name: "Rumtoo",
       description:
-        "ScrewFast offers top-tier hardware tools and expert construction services to meet all your project needs.",
+        "Rumtoo propose des machines de recyclage de plastique haut de gamme et des services de construction experts pour tous vos projets.",
     },
     inLanguage: "en-US",
   }}
